--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@mui/material": "^5.11.11",
+    "@unified-latex/unified-latex": "^1.3.2",
+    "@unified-latex/unified-latex-util-to-string": "^1.3.2",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
-    "latex-parser": "^0.6.2",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0"
