--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@mui/material": "^5.11.11",
+    "@mui/styled-engine-sc": "^5.11.11",
     "@unified-latex/unified-latex": "^1.3.2",
     "@unified-latex/unified-latex-util-to-string": "^1.3.2",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "@mui/icons-material": "^5.11.11",
+    "@mui/lab": "^5.0.0-alpha.124",
+    "styled-components": "^5.3.9"
   }
 }
